snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3.jar.sha1
00d3a321c7e4ca23b908324c305c3db93ea0a51b